Updated .gitignore and removed unnecessary system files

--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -2,8 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "165681af-6b77-4f1d-ac08-c8f30f36c308",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Configure visualization settings\n",
+    "plt.style.use(\"ggplot\")\n",
+    "sns.set_theme()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8bd2f8b-3225-4ba5-9f5d-bc41bbe962ec",
    "metadata": {},
    "outputs": [],
    "source": []
